--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   nestar-batch:
     container_name: nestar-batch
-    restart: always
+    restart: unless-stopped
     image: node:20.10.0
     ports:
       - 4002:3008
